# ml-in-prod

./: .coveragerc  .gitignore  MANIFEST.in  README.md  cloudbuild.yaml  requirements.txt  setup.cfg  setup.py
container/: Dockerfile  build_container.sh  requirements.txt
custom_model/: README.md  cloudbuild.yaml  setup.py
custom_model/config/: training_config.yaml  training_config_ht.yaml
custom_model/preprocess/: batch.py
custom_model/trainer/: __init__.py  _version.py  task.py
dataflow_custom_container/: Dockerfile  build_container.sh  requirements.txt
deploy/: TF Model Deploy.ipynb  deploy_model_to_endpoint.py
model_mlops_with_vertex/: .gitattributes  MANIFEST.in  cloudbuild.yaml  requirements.txt  run_preprocess.py  setup.cfg  setup.py
model_mlops_with_vertex/config/: launch_deploy.sh  launch_preprocess.sh  launch_training.sh  launch_training_ht.sh  launch_training_pipeline.sh  launch_training_pipeline_ht.sh  training_config.yaml  training_config_ht.yaml
model_mlops_with_vertex/deploy/: TF Model Deploy.ipynb  deploy_model_to_endpoint.py  test_deployed_model.py
model_mlops_with_vertex/pipeline/: custom_training_pipeline.py  custom_training_pipeline_ht.py  preprocess_pipeline.py  read_set.py  trainer_pipeline.py  trainer_vertex_pipeline.py
model_mlops_with_vertex/preprocess/: ReadSetTransform.py  __init__.py  text2tfrecord.py
pipeline/: preprocess_pipeline.py  requirements.txt  trainer_pipeline.py
tests/: test_model.py  test_samples.py
trainer/: __init__.py  model.py  task.py  task_hypertune.py  utils.py
(+5 files in other folders)
