[aliases]
test=pytest

[tool:pytest]
addopts = --cov-config .coveragerc --cov-report xml --cov-report term --cov --junitxml tests.xml tests
junit_family = xunit2

[metadata]
description-file = README.md

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = trainer/_version.py
versionfile_build = trainer/_version.py
tag_prefix =
#parentdir_prefix =

